[gd_scene load_steps=7 format=3 uid="uid://cuguknml1tb1x"]

[ext_resource type="Texture2D" uid="uid://dpjln2avncx42" path="res://assets/Units/enemy/laser.png" id="2_06t0k"]
[ext_resource type="Script" uid="uid://djalc66y6jnu7" path="res://src/entities/prey/sniper.gd" id="3_tfbnc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tfbnc"]
atlas = ExtResource("2_06t0k")
region = Rect2(495, 524, 495, 524)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aoxu"]
atlas = ExtResource("2_06t0k")
region = Rect2(0, 1048, 495, 524)

[sub_resource type="SpriteFrames" id="SpriteFrames_8pnmx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfbnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aoxu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2fhk"]
radius = 19.0
height = 70.0

[node name="sniper" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
motion_mode = 1
script = ExtResource("3_tfbnc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -42)
scale = Vector2(0.16969699, 0.16969699)
sprite_frames = SubResource("SpriteFrames_8pnmx")
animation = &"idle"
frame_progress = 0.40920186

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -34)
shape = SubResource("CapsuleShape2D_g2fhk")

[node name="WallCheck" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2(20, 0)
target_position = Vector2(0, 20)

[node name="LaserSight" type="Line2D" parent="."]
visible = false
default_color = Color(1, 0, 0, 1)
width = 2.0

[node name="AimTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
